--- a/gflow-scheduler/pom.xml
+++ b/gflow-scheduler/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>gflow-scheduler</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.gsralex.gflow</groupId>
+            <artifactId>gflow-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
