去除scheduler-client,executor-client,加入client

--- a/gflow-client/pom.xml
+++ b/gflow-client/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>gflow-executorclient</artifactId>
+    <artifactId>gflow-client</artifactId>
 
 
 </project>
