--- a/pom.xml
+++ b/pom.xml
@@ -53,14 +53,17 @@
             <version>${protostuff.version}</version>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>com.gsralex.gdata</groupId>-->
+            <!--<artifactId>gdata-bean</artifactId>-->
+            <!--<version>1.10</version>-->
+        <!--</dependency>-->
 
         <dependency>
-            <groupId>com.gsralex.gdata</groupId>
-            <artifactId>gdata-bean</artifactId>
-            <version>${gdata.version}</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
         </dependency>
-
-
     </dependencies>
 
 </project>
